# pate

./: .dockerignore  .env  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  QUICKSTART.txt  README.rst  cabal.GHC-8.10.7.freeze  cabal.GHC-8.8.4.freeze  cabal.GHC-9.0.2.freeze  cabal.GHC-9.2.8.freeze  cabal.GHC-9.6.2.freeze  cabal.GHC-9.6.3.freeze  cabal.GHC-9.6.5.freeze  cabal.project  cabal.project.dismantle  cabal.project.dist  cabal.project.macaw  initdebug.ghci  loadrepl.ghci  pate.cabal  pate.sh  setupdebug.ghci
.github/: ci.sh
.github/workflows/: main.yml  test.yaml  ticket-management.yml
arch/Pate/: AArch32.hs  ArchLoader.hs  PPC.hs
demos/: Makefile
demos/abort/: test-abort.hints.csv  test-abort.original.c  test-abort.patched.c
demos/challenge02/: challenge-02.original.cpp  challenge-02.original.i  challenge-02.patched.cpp  challenge-02.patched.i
demos/challenge03/: README  challenge03.info
demos/challenge03-variant/: challenge03.info  challenge03.toml
demos/demo1/: demo1.original.c  demo1.patched.c  demo1.sh
docs/: Development.rst  UI-Design.rst
pate_binja/: .gitignore  Developer-Notes.md  README.md  mcad_test.py  pate.py  run-pate.sh  run_pate_demo.py  test_may23_c10_live.py  test_may23_c10_replay.py  test_nov23_t1_rm1018_live.py  test_nov23_t1_rm1018_replay.py  test_nov23_t4_rm1011_dendy_live.py  test_nov23_t4_rm1011_dendy_replay.py  view.py
scripts/: regenerate-freeze-files.sh
src/: Pate.hs
tests/: .programtargets  AArch32TestMain.hs  LoaderTestMain.hs  Main.hs  Makefile  PPC32TestMain.hs  PPCTestMain.hs  SolverTestMain.hs  TestBase.hs  TypesTestMain.hs  template.mk
tools/: ELF.hs  anvill-smasher.py  pate-repl.cabal
tools/pate/: Interactive.hs  JSONReport.hs  Main.hs  Output.hs  Repl.hs  ReplHelper.hs  pate.css
tools/pate-repl/: Repl.hs  ReplHelper.hs
tools/pate-repl-base/: ReplBase.hs
tools/pate/Interactive/: State.hs
tools/pate/Interactive/Render/: BlockPairDetail.hs  Console.hs  Proof.hs  SliceGraph.hs
tools/pate/Pate/Hints/: CSV.hs  DWARF.hs  JSON.hs
tools/pate/static/: pate.css  pate.js
(+420 files in other folders)
